#2 - Carousel Loop + Fix 'y' scrollbar

--- a/css/landing.css
+++ b/css/landing.css
@@ -1,3 +1,6 @@
+html {
+    overflow-y: hidden;
+}
 html,body {
     font-family: 'Open Sans', serif;
 }
